Fixed bug where upvote feature was not working. - Voted feedback now get a background color 'blue'. - voting only performed once per feedback per user.

--- a/src/components/pages/suggestions-page/suggestions-page-main/suggestion/suggestion.style.scss
+++ b/src/components/pages/suggestions-page/suggestions-page-main/suggestion/suggestion.style.scss
@@ -101,6 +101,13 @@ $upvote-hover-clr: #cfd7ff;
       color: $navy-blue-light30-clr;
     }
   }
+  .voted {
+    background-color: $blue-clr;
+    pointer-events: none;
+    p {
+      color: $white-clr;
+    }
+  }
 }
 
 @media screen and (min-width: 768px) {
