Linked 'currentUser' data to roadmap components.

--- a/src/components/pages/roadmap-page/roadmap-planned/roadmap-planned.style.scss
+++ b/src/components/pages/roadmap-page/roadmap-planned/roadmap-planned.style.scss
@@ -133,6 +133,12 @@ $upvote-hover-clr: #cfd7ff;
         color: $navy-blue-clr;
       }
     }
+    .voted {
+      background-color: $blue-clr;
+      p {
+        color: $white-clr;
+      }
+    }
   }
 }
 
