--- a/src/components/pages/suggestions-page/suggestions-page-aside/suggestions-aside.style.scss
+++ b/src/components/pages/suggestions-page/suggestions-page-aside/suggestions-aside.style.scss
@@ -1,4 +1,3 @@
-
 $navy-blue-clr: #373f68;
 $navy-blue-light30-clr: #3a4374;
 $navy-blue-light50-clr: #647196;
@@ -11,143 +10,140 @@ $orange-light-clr: #f49f85;
 $white-clr: #ffffff;
 $navy-blue-transparent-clr: #28292ec0;
 
-
-.aside-main-wrapper{
-    display: relative;
+.aside-main-wrapper {
+  display: relative;
 }
 
-.aside_main{
-    display: relative;
+.aside_main {
+  display: relative;
 }
 
-.aside-secondary-wrapper{
-    position: absolute;
-    z-index: 1;
-    background: $navy-blue-transparent-clr;
-    width: 100vw;
-    overflow: hidden;
-    visibility: hidden;
-    transition: all 0.5s ease-in-out; 
+.aside-secondary-wrapper {
+  position: absolute;
+  z-index: 1;
+  background: $navy-blue-transparent-clr;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  visibility: hidden;
+  transition: all 0.5s ease-in-out;
 
-    &.open{
-        visibility: visible;
-    }   
-   
+  &.open {
+    visibility: visible;
+  }
 }
 
-.aside-secondary-header{
-    background: url('../../../../assets/bigbackground-header.png') no-repeat;
-    background-size: 223px 178px;
-    background-position: left;
-    padding: 15px 20px;
-    display: none;
+.aside-secondary-header {
+  background: url("../../../../assets/bigbackground-header.png") no-repeat;
+  background-size: 223px 178px;
+  background-position: left;
+  padding: 15px 20px;
+  display: none;
 
-    &-title{
-        margin: 0;
-        color: #fff;
-        letter-spacing: -0.19px;
-        font-size: 15px;
-    }
+  &-title {
+    margin: 0;
+    color: #fff;
+    letter-spacing: -0.19px;
+    font-size: 15px;
+  }
 
-    p{
-        margin: 0;
-        color: #fff;
-        letter-spacing: 0;
-        font-size: 13px;
-    }
+  p {
+    margin: 0;
+    color: #fff;
+    letter-spacing: 0;
+    font-size: 13px;
+  }
 }
 
-.aside-secondary{
-    width: 271px;
-    height: 595px;
-    padding: 15px;
-    transform: translateX(100%);
-    background: $navy-blue-light70-clr;
-    margin-left: auto;
-    transition: all 0.5s ease-in-out; 
+.aside-secondary {
+  width: 271px;
+  height: 100vh;
+  padding: 15px;
+  transform: translateX(100%);
+  background: $navy-blue-light70-clr;
+  margin-left: auto;
+  transition: all 0.5s ease-in-out;
 
-    &.open{
-        transform: translateX(0%);
-    }
+  &.open {
+    transform: translateX(0%);
+  }
 }
 
 @media screen and (min-width: 768px) {
+  .aside-main-wrapper {
+    display: flex;
+    justify-content: space-between;
+    background: $navy-blue-light70-clr;
+    align-items: center;
+  }
+  .aside_main {
+    display: none;
+  }
+  .aside-secondary-wrapper {
+    display: block;
+    visibility: visible;
+    width: 100%;
+    position: initial;
+    background: none;
+    height: 178px;
+    margin-block: 56px 40px;
 
-    .aside-main-wrapper{
+    .aside-secondary {
+      height: 100%;
+      width: 100%;
+      transform: none;
+      margin-left: 0;
+      display: flex;
+      align-items: center;
+      justify-content: space-evenly;
+      background: none;
+      padding: 2.5rem 0;
+
+      &-header {
         display: flex;
-        justify-content: space-between;
-        background: $navy-blue-light70-clr;
-        align-items: center;
-    }
-    .aside_main{
-        display: none;
-    }
-    .aside-secondary-wrapper{
-        display: block;
-        visibility: visible;
-        width: 100%;
-        position: initial;
-        background: none;
+        flex-direction: column;
+        justify-content: flex-end;
+        min-width: 223px;
+        height: 178px;
+        border-radius: 10px;
+        background-size: 255px 178px;
 
-        .aside-secondary{
-            height: 100%;
-            width: 100%;
-            transform: none;
-            margin-left: 0;
-            display: flex;
-            align-items: center;
-            justify-content: space-evenly;
-            background: none;
-            padding: 2.5rem 0;
-
-            &-header{
-                display: flex;
-                flex-direction:column;
-                justify-content: flex-end;
-                min-width: 223px;
-                height: 178px;
-                border-radius: 10px;
-                background-size: 255px 178px;
-    
-
-                &-title{
-                    font-size: 20px;
-                }
-                p{
-                    font-size: 15px;
-                    margin-bottom: 0.7rem;
-                }
-            }
-        }  
+        &-title {
+          font-size: 20px;
+        }
+        p {
+          font-size: 15px;
+          margin-bottom: 0.7rem;
+        }
+      }
     }
+  }
 }
 
 @media screen and (min-width: 996px) {
+  .aside-main-wrapper {
+    flex-direction: column;
+    justify-content: initial;
+    align-items: flex-start;
+  }
+  .aside_main {
+    display: none;
+  }
+  .aside-secondary-wrapper {
+    height: auto;
+    margin-block: 0;
 
-    .aside-main-wrapper{
-        flex-direction: column;
-        justify-content: initial;
-        align-items: flex-start;
-    }
-    .aside_main{
-        display: none;
-    }
-    .aside-secondary-wrapper{
+    .aside-secondary {
+      flex-direction: column;
+      padding: 0;
+      gap: 1.5rem;
+      //height: 529px;
 
-        .aside-secondary{
-            flex-direction: column;
-            padding: 0;
-            gap: 1.5rem;
-
-            &-header{
-                max-width: 255px;
-                width: 100%;
-                height: 137px;
-            }
-        }  
+      &-header {
+        max-width: 255px;
+        width: 100%;
+        height: 137px;
+      }
     }
+  }
 }
-   
-
-
-
