--- a/src/components/pages/suggestions-page/suggestions-page.style.scss
+++ b/src/components/pages/suggestions-page/suggestions-page.style.scss
@@ -5,6 +5,7 @@ $navy-blue-light70-clr: #f2f4ff;
     display: flex;
     flex-direction: column;
     padding: 0 39.5px;
+    margin: 0 auto;
   }
 }
 @media screen and (min-width: 996px) {
@@ -14,6 +15,6 @@ $navy-blue-light70-clr: #f2f4ff;
     padding: 39.5px;
     max-width: 1175px;
     width: 100%;
-    margin: 0 auto;
+    margin: 54.5px auto 0 auto;
   }
 }
